# api-template-py

./: .gitignore  Dockerfile  LICENSE  README-EN.md  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  run.sh
alembic/: env.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoint/: oauth.py  root.py
app/config/: settings.py
app/core/entity/: base.py
app/db/postgres/: engine.py  init_db.py
app/db/redis/: engine.py
