[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Guilherme Loiola <guilherme.loiola@coinnodes.tech>"]
readme = "README.md"

[tool.poetry.dependencies] # adapt to your project
python = "^3.9"
pytest-order = "^1.3"
pytest-httpx = "^0.30"
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
sqlmodel = "^0.0.11"
alembic = "^1.12.1"
weasyprint = "^62.3"
googlesearch-python = "^1.2.4"
pillow = "^9.0.0"
cloudinary = "^1.40.0"
pytz = "^2023.3.post1"
pydantic = { version = "^1.9", extras = ["email"] }
redis = "^5.0.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = "^1.7.4"
psycopg2-binary = "^2.9.6"
python-multipart = "^0.0.6"
bcrypt = "~4.0.1"
holidays = "^0.34"
pyotp = "^2.9.0"
qrcode = "^7.4.2"
websockets = "^13.0.1"
web3 = "^6.11.3"
google-api-python-client = "^2.108.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
celery = { extras = ["redis"], version = "^5.3.6" }
flower = "^2.0.1"
tenacity = "^8.2.3"
gspread = "^5.12.0"
twilio = "^8.10.3"
apscheduler = "^3.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


'